cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
synopsis:           Advent of Code 2022
homepage:           https://github.com/stasiaks/aoc-2022
bug-reports:        https://github.com/stasiaks/aoc-2022/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Sebastian Stasiak
maintainer:         12955338+stasiaks@users.noreply.github.com
copyright:          2022 Sebastian Stasiak

library
    exposed-modules:  Common

    hs-source-dirs:   lib
    default-language: Haskell2010
    build-depends:    base ^>=4.16.3.0

common day
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.3.0,
        aoc2022

executable Day1
    import:           day
    main-is:          Day1.hs

test-suite test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          test.hs
    build-depends:
        base ^>=4.16.3.0,
        tasty ^>= 1.4.2.3,
        tasty-hunit ^>= 0.10.0.3,
        aoc2022
