cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
synopsis:           Advent of Code 2022
homepage:           https://github.com/stasiaks/aoc-2022
bug-reports:        https://github.com/stasiaks/aoc-2022/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Sebastian Stasiak
maintainer:         12955338+stasiaks@users.noreply.github.com
copyright:          2022 Sebastian Stasiak

library
    exposed-modules:
        Common,
        Common.Parser,
        Day1
        Day2
        Day3
        Day4
        Day5
        Day6
        Day7

    hs-source-dirs:   lib
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.3.0,
        containers ^>= 0.6.6,
        parsec ^>= 3.1.15

executable solve
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0,
        aoc2022

test-suite test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          test.hs
    build-depends:
        base ^>=4.16.3.0,
        tasty ^>= 1.4.2.3,
        tasty-hunit ^>= 0.10.0.3,
        aoc2022
